--- a/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
@@ -23,11 +23,10 @@
     <link href="/../static/css/responsive.css" rel="stylesheet" />
 
     <style>
-        /* Estilos para el formulario de inicio de sesión */
         body, html {
             height: 100%; 
-            margin: 0; /* Elimina los márgenes predeterminados */
-            font-family: Arial, sans-serif; /* Usa una fuente genérica */
+            margin: 0;
+            font-family: Arial, sans-serif;
         }
 
         .container_items {
@@ -65,33 +64,10 @@
             text-align: center;
         }
 
-
-        /* footer section*/
-
-        .footer_section_login {
-        background-color: #fbfdfd;
-        padding: 20px;
-        font-weight: 500;
-        }
-
-        .footer_section_login p {
-        color: #292929;
-        margin: 0;
-        text-align: center;
-        }
-
-        .footer_section_login a {
-        color: #292929;
-        }
-
-        /* end footer section*/
-
     </style>
     <script>
-        // Función para redirigir después de 5 segundos
         function redirectAfterDelay() {
             setTimeout(function() {
-                // window.location.href = "/usuarios/login";
                 window.location.href = "/usuarios/signup/logout/?next=/usuarios/login";
             }, 4000); // 4000 milisegundos = 4 segundos
         }
@@ -107,7 +83,7 @@
         </div>
     </div>
       <!-- footer section -->
-    <section class="container-fluid footer_section_login">
+    <section class="container-fluid footer_section">
         <p>
         &copy;  2024 MARKETECO - Universidad de Sevilla </a>
         </p>
