--- a/EcoWEB/Apps/Compras/templates/checkout.html
+++ b/EcoWEB/Apps/Compras/templates/checkout.html
@@ -54,10 +54,15 @@
         }
 
         .h3 {
-            margin-top: 15px;
+            font-size: 3em;
+            margin-top: 20px;
+            text-align: center;
+            color: #024835;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+
         }
     
-        h2 {
+        .h2 {
             font-size: 2.5em;
             text-align: center;
             color: #3d8a4f;
@@ -105,7 +110,9 @@
 <body>
     <!-- <h1>CHECKOUT</h1> -->
     <div class="checkout-summary">
-        <h2>Resumen del pedido</h2>
+        <div class="h2">
+            <h2>Resumen del pedido</h2>
+        </div>
         {% load custom_filters %}
         {% for productoid, producto in carrito.items %}
         <div class="product-item">
@@ -119,7 +126,10 @@
             <p>Cantidad: {{ producto.cantidad }}</p>
         </div>
         {% endfor %}
-        <h3>Total: {{ total|format_decimal  }}€</h3>
+        <div class="h3">
+            <h3>Total: {{ total|format_decimal  }}€</h3>
+        </div>
+        
     </div>
     <div class="btn-container">
         <form action="{% url 'checkout' %}" method="post">
