--- a/EcoWEB/Apps/Compras/templates/pagado.html
+++ b/EcoWEB/Apps/Compras/templates/pagado.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pago Exitoso</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>PAGO CANCELADO</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+    <link href="/../static/css/style.css" rel="stylesheet" />
+    <link href="/../static/css/responsive.css" rel="stylesheet" /> 
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #f6f8f7;
+        }
+
+        h2 {
+            font-size: 2.5em;
+            text-align: center;
+            color: #3d8a4f;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .checkout-summary {
+            width: 100%;
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+
+        .checkout-summary h2, .checkout-summary p {
+            margin: 10px 0;
+        }
+
+    </style>
+    <script>
+        function redirectAfterDelay() {
+            setTimeout(function() {
+                window.location.href = "/";
+            }, 4000); // 4000 milisegundos = 4 segundos
+        }
+    </script>
+
 </head>
-<body>
-    <h1>Pago Exitoso</h1>
-    <p>¡Gracias por tu compra!</p>
+<body onload="redirectAfterDelay()">
+    <div class="checkout-summary">
+        <h2>PAGO REALIZADO</h2>
+        <p>¡¡Gracias por tu compra!!</p>
+        <p>Revisa tu buzón de correo</p>
+    </div>
+
 </body>
 </html>
