--- a/EcoWEB/static/css/style.css
+++ b/EcoWEB/static/css/style.css
@@ -84,6 +84,20 @@ body {
   text-transform: uppercase;
 }
 
+.contact_section {
+  padding: 75px 0;
+
+  .map_container {
+    position: relative;
+    height: 400px;
+
+    #map {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 a,
 a:hover,
 a:focus {
@@ -292,7 +306,7 @@ a:focus {
   width: 110px;
   height: 110px;
   border-radius: 100%;
-  background-color: #18d3ff;
+  background-color: #325600;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -330,7 +344,7 @@ a:focus {
 }
 
 .gallery-section {
-  background-color: #0dc3ff;
+  background-color: #325600;
 }
 
 .gallery-section .container {
@@ -403,6 +417,7 @@ a:focus {
 
 .client_section .pl-100 {
   padding-left: 100px;
+  
 }
 
 .client_section .client_container {
@@ -416,15 +431,18 @@ a:focus {
       -ms-flex-align: center;
           align-items: center;
   padding: 30px 0;
+  background-color: rgba(124, 160, 0, 0.04);
 }
 
-.client_section .client_container .img_box {
+.client_section .client_container .img_box {  
   width: 200px;
   margin-left: -100px;
 }
 
 .client_section .client_container .img_box img {
   min-width: 100%;
+  max-width: 20px;
+  height: auto;
 }
 
 .client_section .client_container .detail_box {
@@ -432,64 +450,15 @@ a:focus {
 }
 
 .client_section .carousel-indicators li {
-  background-color: #0dc3ff;
+  background-color: #325600;
 }
 
 .client_section .carousel-indicators .active {
   background-color: #8c8a8a;
 }
 
-.map_section {
-  position: relative;
-}
-
-.map_section #map {
-  position: absolute;
-}
-
-.map_section .form_container {
-  position: relative;
-  width: 50%;
-  z-index: 9;
-}
-
-.map_section .form_container form {
-  background-color: rgba(255, 255, 255, 0.98);
-  padding: 45px;
-  margin: 75px 0;
-}
-
-.map_section .form_container input {
-  border: none;
-  outline: none;
-  background-color: transparent;
-  border-bottom: 1px solid #111111;
-  padding-top: 35px;
-  width: 100%;
-}
-
-.map_section .form_container input.message-box {
-  padding-top: 55px;
-}
-
-.map_section .form_container button {
-  display: inline-block;
-  padding: 12px 20px;
-  background-color: #023b48;
-  border: 1px solid #023b48;
-  color: #ffffff;
-  border-radius: 30px;
-  width: 100%;
-  margin-top: 35px;
-}
-
-.map_section .form_container button:hover {
-  background-color: transparent;
-  color: #023b48;
-}
-
 .info_section {
-  background-color: #0dc3ff;
+  background-color: #325600;
 }
 
 .info_items {
