--- a/EcoWEB/Apps/Usuarios/templates/perfil.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil.html
@@ -158,9 +158,10 @@
                     <p> No has subido una foto de perfil.</p>
                 {% endif %}
             </p>
-            
-            <a href="{% url 'edit_profile' %}" class="btn btn_pass">Editar Perfil</a>
-            
+            <div class="button_group">
+                <a href="{% url 'edit_profile' %}" class="btn btn_pass">Editar Perfil</a>
+                <a href="{% url 'mis_compras' %}" class="btn btn_pass">Mis compras</a>
+            </div>
             <div class="button_group">
                 <a href="/" class="btn">Volver a Inicio</a>
                 <a href="/usuarios/signup/logout" class="btn btn-cancel">Salir de la cuenta de {{ user.username }}</a>
